--- a/ecoTrack/package.json
+++ b/ecoTrack/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "chart.js": "^4.4.8",
+    "react-chartjs-2": "^5.3.0",
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
