--- a/ecoTrack/package.json
+++ b/ecoTrack/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.8",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
