--- a/ecoTrack/package.json
+++ b/ecoTrack/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "chart.js": "^4.4.8",
+    "firebase": "^11.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
